--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -35,6 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
@@ -48,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DependencyResolver.cs" />
     <Compile Include="Documento.cs">
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
     </Compile>
@@ -106,6 +108,12 @@
       <DependentUpon>MonitoreoDataModel.edmx</DependentUpon>
       <LastGenOutput>MonitoreoDataModel.cs</LastGenOutput>
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Resolver\Resolver.csproj">
+      <Project>{b6ddcd2c-62ad-4764-a0f8-98b8d9f69daa}</Project>
+      <Name>Resolver</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
