--- a/BusinessEntities/BusinessEntities.csproj
+++ b/BusinessEntities/BusinessEntities.csproj
@@ -44,6 +44,7 @@
     <Compile Include="ItemEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistroEntity.cs" />
+    <Compile Include="Test.cs" />
     <Compile Include="UsuarioEntity.cs" />
   </ItemGroup>
   <ItemGroup>
