Update 29/04/2017 adicion store procedure para obtener datos para dashboard

--- a/DataModel/App.Config
+++ b/DataModel/App.Config
@@ -7,4 +7,7 @@
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
-<connectionStrings><add name="MonitoreoDbEntities" connectionString="metadata=res://*/MonitoreoDataModel.csdl|res://*/MonitoreoDataModel.ssdl|res://*/MonitoreoDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=monitoreoserverdb.database.windows.net;initial catalog=MonitoreoDb;persist security info=True;user id=polaniavera;password=Apolion0;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+  <connectionStrings>
+    <add name="MonitoreoDbEntities" connectionString="metadata=res://*/MonitoreoDataModel.csdl|res://*/MonitoreoDataModel.ssdl|res://*/MonitoreoDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=monitoreoserverdb.database.windows.net;initial catalog=MonitoreoDb;persist security info=True;user id=polaniavera;password=Apolion0;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
