--- a/BusinessServices/BusinessServices.csproj
+++ b/BusinessServices/BusinessServices.csproj
@@ -52,9 +52,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyResolver.cs" />
+    <Compile Include="IItemServices.cs" />
     <Compile Include="IRegistroServices.cs" />
+    <Compile Include="ItemServices.cs" />
+    <Compile Include="IUsuarioServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RegistroServices.cs" />
+    <Compile Include="UsuarioServices.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BusinessEntities\BusinessEntities.csproj">
