cambio en el servicio getDashboard, se combinan los objetos item y registro en un solo.

--- a/BusinessEntities/BusinessEntities.csproj
+++ b/BusinessEntities/BusinessEntities.csproj
@@ -46,6 +46,7 @@
     <Compile Include="RegistroEntity.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="UsuarioEntity.cs" />
+    <Compile Include="VehiculosEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataModel\DataModel.csproj">
