--- a/BusinessServices/BusinessServices.csproj
+++ b/BusinessServices/BusinessServices.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DependencyResolver.cs" />
+    <Compile Include="EstacionesServices.cs" />
+    <Compile Include="IEstacionesServices.cs" />
     <Compile Include="IIotServices.cs" />
     <Compile Include="IItemServices.cs" />
     <Compile Include="IotServices.cs" />
