--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -53,6 +53,9 @@
     <Compile Include="Documento.cs">
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Estaciones.cs">
+      <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="GenericRepository\GenericRepository.cs" />
     <Compile Include="GenericRepository\RegistroCustomRepository.cs" />
     <Compile Include="getMaximaLectura_Result.cs">
