--- a/GestionMonitoreo/GestionMonitoreo.csproj
+++ b/GestionMonitoreo/GestionMonitoreo.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IotController.cs" />
+    <Compile Include="Controllers\ItemController.cs" />
     <Compile Include="Controllers\RegistroController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
