--- a/BusinessEntities/BusinessEntities.csproj
+++ b/BusinessEntities/BusinessEntities.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="DocumentoEntity.cs" />
     <Compile Include="EstacionesEntity.cs" />
+    <Compile Include="GrupoEntity.cs" />
     <Compile Include="IotTemperaturaEntity.cs" />
     <Compile Include="ItemEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
