--- a/GestionMonitoreo/GestionMonitoreo.csproj
+++ b/GestionMonitoreo/GestionMonitoreo.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Controllers\GrupoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\IotController.cs" />
     <Compile Include="Controllers\ItemController.cs" />
