--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -49,6 +49,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conductor.cs">
+      <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DependencyResolver.cs" />
     <Compile Include="Documento.cs">
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
@@ -62,9 +65,6 @@
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Grupo.cs">
-      <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
-    </Compile>
-    <Compile Include="IotTemperatura.cs">
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Item.cs">
@@ -85,6 +85,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MonitoreoDataModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MonitoreoDataModel1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MonitoreoDataModel.edmx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registro.cs">
       <DependentUpon>MonitoreoDataModel.tt</DependentUpon>
@@ -99,7 +104,7 @@
     <None Include="App.Config" />
     <EntityDeploy Include="MonitoreoDataModel.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MonitoreoDataModel.Designer.cs</LastGenOutput>
+      <LastGenOutput>MonitoreoDataModel1.Designer.cs</LastGenOutput>
     </EntityDeploy>
     <None Include="MonitoreoDataModel.edmx.diagram">
       <DependentUpon>MonitoreoDataModel.edmx</DependentUpon>
